# OTSOpy

./: 404.html  CITATION.cff  MANIFEST.in  README.md  __init__.py  index.html  mkdocs.yml  objects.inv  requirements.txt  setup.py
.github/workflows/: build.yml  docs.yml  gitpages  python-publish.yml
CLI/: index.html
Cone/: index.html
Coordtrans/: index.html
Cutoff/: index.html
Flight/: index.html
Magfield/: index.html
OTSO/: Callibrate.py  Cone.py  Coordtrans.py  Cutoff.py  Flight.py  Magfield.py  OTSO.py  Planet.py  Trace.py  Trajectory.py  __init__.py  _cone.py  _coordtrans.py  _cutoff.py  _flight.py  _magfield.py  _planet.py  _trace.py  _trajectory.py  otso_cli.py  setup_complete.txt
Planet/: index.html
Trace/: index.html
Trajectory/: index.html
docs/: CLI.md  Cone.md  Coordtrans.md  Cutoff.md  Flight.md  Magfield.md  Planet.md  Publications.md  Trace.md  Trajectory.md  index.md
logs_55169258194/: 0_build (ubuntu-latest, 3.9).txt  10_build (macos-latest, 3.8).txt  11_build (macos-latest, 3.9).txt  1_build (windows-latest, 3.11).txt  2_build (windows-latest, 3.8).txt  3_build (macos-latest, 3.11).txt  4_build (ubuntu-latest, 3.1).txt  5_build (macos-latest, 3.1).txt  6_build (ubuntu-latest, 3.8).txt  7_build (windows-latest, 3.1).txt  8_build (windows-latest, 3.9).txt  9_build (ubuntu-latest, 3.11).txt
logs_55169258194/build (macos-latest, 3.1)/: 14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  system.txt
logs_55169258194/build (macos-latest, 3.11)/: 14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  5_Install dependencies.txt  system.txt
logs_55169258194/build (macos-latest, 3.8)/: 14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  system.txt
logs_55169258194/build (macos-latest, 3.9)/: 14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  system.txt
logs_55169258194/build (ubuntu-latest, 3.1)/: 14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  system.txt
logs_55169258194/build (ubuntu-latest, 3.11)/: 14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  4_Install gfortran (Linux only).txt  system.txt
logs_55169258194/build (ubuntu-latest, 3.8)/: 14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  system.txt
logs_55169258194/build (ubuntu-latest, 3.9)/: 14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  system.txt
logs_55169258194/build (windows-latest, 3.1)/: 14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  system.txt
logs_55169258194/build (windows-latest, 3.11)/: 14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  system.txt
logs_55169258194/build (windows-latest, 3.8)/: 14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  system.txt  (+1 more)
src/fortran/: Acceleration.f95  Asymptotic.f95  CMakeLists.txt  Conversion.f95  CoordTrans.for  CoordinateTransforms.f95  CustomGaussModule.f95  Fill_IMF_gaps.for  Fill_SW_gaps.for  GEOPACK_DP.f  GeopackModule.f95  GridModule.f95  Integration.f95  IntegrationFunctions.f95  LorentzRelativity.f95  MHDBfield.f95  MHDModule.f95  MagneticField.f95  MagneticFieldFunctions.f95  MagnetopauseEscape.f95  MagnetopauseFunctions.f95  MagnetopauseModule.f95  MiddleMan.f95  Particle.f95  ParticleModule.f95  Prepare_input_4.for  Prepare_intervals_1.for  Rigidity.f95  SolarWindModule.f95  T96.f  TA16_RBF.f  TSY15_B.f  TSY15_N.f  TSY89DP.f  TSY89_BobergExtension.f95  TSY89_refit.f95  TSY89a.f95  TSY89c.f95  Tsyg_01.for  Tsyganenko04.f  (+19 more)
(+123 files in other folders)
